# icon

./: .gitignore  404.html  LICENSE  README.md  icon.spec  index.html  mkdocs.yml  objects.inv  openapi.yaml  pyproject.toml
.github/workflows/: gh-pages.yml  lint.yaml  release.yml  test.yaml  tests.yaml
about/license/: index.html
alembic/: env.py
alembic/versions/: 000976b1cd64_renaming_job_table.py  027f86f1812b_adds_unique_constraint_on_scheduled_time.py  089abe6a0eed_changes_experimentsource_table.py  1dbf22d794c7_adds_device_id_to_scan_parameters_table.py  2bc7556020cf_adds_retry_attempts_and_retry_delay_.py  4c4713742c14_adds_repetitions_column_to_job_table.py  5b41d0d6c856_adds_scan_parameters_table.py  6ecff2cc7225_adds_number_of_shots_to_job_table.py  8640dcfde6f0_removes_priority_column_from_job_.py  a8766054064d_initial_revision.py  c6c455b61559_adds_device_table.py  e53ce613a1ed_adds_parent_job_id_to_job_table.py  f5fd45fdded6_adds_debug_mode_column_to_job_table.py
docker/: docker-compose.yml  influxdb_config.yaml
docker/influxdb/: setup-v1.sh
docker/influxdb3/: admin-token.json
docker/influxdb3-ui/: config.json
docs/: getting-started.md  ttl_control.md  ttl_server_implementation.md
docs/about/: license.md
docs/getting-started/: architecture.md  configuration-file.md  experiment-library.md  running-icon.md
docs/getting-started/frontend/: devices.md  experiments.md  parameters.md  start.md
docs/plantuml_diagrams/: Readme.md  class_diagrams.puml  hardware_worker.puml  overview.puml  pre_processing_worker.puml  scheduler.puml  sqlite_ER.puml
docs/reference/: server.md
frontend/: .gitignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: About.tsx  App.tsx  main.tsx  socket.ts
frontend/src/components/: Device.tsx  ExperimentDetails.tsx  HelpButtonComponent.tsx  JobStatusIndicator.tsx  JobView.tsx  OverlayLock.tsx  ParameterGroupDisplay.tsx  PlotInterfaceComponent.tsx  ReactEcharts.tsx  ResultChannelPlot.tsx  ScanInterfaceComponent.tsx  ScanParameterTable.tsx  VirtualisedJobList.tsx
frontend/src/components/devices/: AddDeviceDialog.tsx  Device.tsx  ReachabilityIndicator.tsx  ScannableParameterInterface.tsx
frontend/src/components/jobView/: FitPanel.tsx  HistogramPlot.tsx
frontend/src/components/parameterComponents/: BaseButton.tsx  BaseNumberComponent.tsx  Button.tsx  Combobox.tsx  (+8 more)
frontend/src/contexts/: DeviceInfoContext.tsx  DeviceStateContext.tsx  DevicesContext.tsx  ExperimentsContext.tsx  JobRunsContext.tsx  JobsContext.tsx  ParameterDisplayGroupsContext.tsx  ParameterMetadataContext.tsx  ParameterStoreContext.tsx  ScanContext.tsx  ScanProvider.tsx  SchedulerContext.tsx
frontend/src/hooks/: useBrowserSetting.tsx  useConfiguration.tsx  useControlState.tsx  useDeviceStateSync.tsx  useDevicesSync.tsx  useExperimentData.tsx  useExperiments.tsx  useJobInfo.tsx  useJobRunInfo.tsx  useJobRunsSync.tsx  useJobsSync.tsx  useParameter.tsx  useParameterDisplayGroups.tsx  useParameterStore.tsx  useResponsiveGridColumns.tsx  useScanContext.tsx  useScanInfoState.tsx  useTTLState.tsx
frontend/src/layouts/: dashboard.tsx  job-viewer.tsx
frontend/src/pages/: data.tsx  devices.tsx  experiments.tsx  index.tsx  job-viewer.tsx  parameters.tsx  plot.tsx  settings.tsx  ttl.tsx
frontend/src/stores/: parmeterStore.ts
frontend/src/types/: Configuration.ts  Device.ts  DeviceInfo.ts  ExperimentData.ts  ExperimentMetadata.ts  ExperimentSource.ts  Job.ts  JobRun.ts  ScanParameter.ts  ScanParameterGenerationSpec.ts  ScanParameterInfo.ts  ScanParameterValueGenerator.ts  SerializedObject.ts  enums.ts
frontend/src/utils/: HierarchicalNavManager.ts  MruSelectionTree.ts  ScanInfoNavManager.ts  ScanInfoSelectionHistory.ts  buildResultChannelChartSeries.ts  cancelJob.ts  compareJobs.ts  copyEChartsToClipboard.ts  deserializer.ts  experimentUtils.ts  fitFunctions.ts  getScanIndex.ts  numberValid.ts  pauseJob.ts  resumeJob.ts  retakeDataPoints.ts  scanUtils.ts  serializationUtils.ts  stateUtils.ts  submitJob.ts  updateConfiguration.ts  updateDeviceParamter.ts  updateJobParams.ts  updateParameterValue.ts  windowUtils.ts
frontend/tests/hooks/: useScanInfoState.reducer.test.ts
frontend/tests/utils/: HierarchicalNavManager.test.ts  MruSelectionTree.test.ts  ScanInfoNavManager.test.ts  ScanInfoSelectionHistory.test.ts  deserializer.test.ts  fitFunctions.test.ts  scanUtils.test.ts
getting-started/architecture/: index.html
getting-started/configuration-file/: index.html
getting-started/experiment-library/: index.html
getting-started/frontend/data/: index.html
getting-started/frontend/devices/: index.html
getting-started/frontend/experiments/: index.html
getting-started/frontend/parameters/: index.html
getting-started/frontend/settings/: index.html
getting-started/frontend/start/: index.html
getting-started/running-icon/: index.html
k8s/: dev.yml
plantuml_diagrams/: api_overview.puml  class_diagrams.puml  post_processing_worker.puml  pre_processing_worker.puml  scheduler.puml
plantuml_diagrams/Readme/: index.html
reference/server/: index.html
search/: search_index.json
src/icon/: __init__.py  config.py  logging.py
src/icon/client/: client.py
src/icon/config/: __init__.py  config.py  config_path.py  latest.py  migrations.py  reloader.py  v1.py  v2.py
src/icon/serialization/: __init__.py  deserializer.py  serializer.py  types.py
src/icon/server/: __main__.py  exceptions.py  queue_manager.py  shared_resource_manager.py
tests/: __init__.py  config.yaml  conftest.py  generate_test_hdf5.py
tests/client/api/: test_experiments_controller.py
tests/config/: test_config.py
tests/server/api/: test_configuration_controller.py  test_scheduler_controller.py  test_ttl_controller.py
tests/server/data_access/: test_experiment_data_repository.py  test_venv.py
tests/server/fitting/: test_fit_runner.py  test_models.py
tests/server/pre_processing/: test_worker.py
tests/server/scheduler/: test_scheduler.py
vite/src/components/: ExperimentDetails.tsx
(+218 files in other folders)
