[project]
name = "icon"
version = "0.2.0"
description = "Ion CONtrol Experiment Control Software"
readme = "README.md"
authors = [
    { name = "Mose Müller", email = "mosemueller@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydase>=0.10.21",
    "pytz>=2024.2",
]

[project.optional-dependencies]
server = [
    "alembic>=1.14.0",
    "influxdb>=5.3.2",
    "scipy>=1.14.0",
    "sqlalchemy>=2.0.36",
    "tables>=3.10.1",
    "h5py>=3.12.1",
    "psutil>=7.0.0",
]
zedboard = [
    "tiqi-zedboard @ git+ssh://git@gitlab.phys.ethz.ch/tiqi-projects/drivers/tiqi-zedboard.git@v1.3.0",
]
client = [
    "ipympl>=0.9.5",
    "matplotlib>=3.10.0",
    "notebook>=7.3.1",
    "pandas>=2.2.3",
]
pycrystal = [
    "pycrystal @ git+ssh://git@gitlab.phys.ethz.ch/tiqi-projects/ionpulse-python-sdk/pycrystal.git@v2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.8.4",
    "types-psutil>=6.1.0.20241102",
    "types-pytz>=2024.2.0.20241003",
    "types-pyyaml>=6.0.12.20250402",
    "types-requests>=2.32.0.20250328",
]
build = [
    "pyinstaller>=6.15.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.7",
    "mkdocs-material>=9.6.19",
    "mkdocstrings[python]>=0.30.0",
]


[tool.pyright]
include = ["src/icon", "tests"]
exclude = [
    "src/icon/server/data_access/templates/"
]
typeCheckingMode = "basic"


[tool.ruff]
target-version = "py310" # Always generate Python 3.10-compatible code
extend-exclude = [
    "docs", 
    "frontend", 
    "src/icon/server/data_access/templates/"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",      # flake8-annotations (mypy's job)
    "BLE001",   # blind-except
    "COM812",   # missing-trailing-comma (conflicts with formatter)
    "D105",     # undocumented-magic-method
    "E501",     # line too long - formatters job
    "EM101",    # raw-string-in-exception
    "EM102",    # f-string-in-exception
    "FIX",      # flake8-fixme (flake8-todos is enough)
    "ISC001",   # single-line-implicit-string-concatenation (conflicts with formatter)
    "PGH003",   # blanket-type-ignore
    "PLR0913",  # too-many-arguments
    "RUF006",   # asyncio-dangling-task
    "PERF203",  # try-except-in-loop
    "PTH",      # pathlib
    "S104",     # hardcoded-bind-all-interfaces
    "S301",     # suspicious-pickle-usage
    "S603",     # subprocess-without-shell-equals-true
    "S605",     # start-process-with-a-shell
    "S607",     # start-process-with-partial-pathh
    "S608",     # hardcoded-sql-expression
    "TRY003",   # raise-vanilla-args
    # TODO:
    "A001",     # builtin-variable-shadowing
    "A002",     # builtin-argument-shadowing
    "A003",     # builtin-attribute-shadowing
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D102",     # undocumented-public-method
    "D103",     # undocumented-public-function
    "D104",     # undocumented-public-package
    "D107",     # undocumented-public-init
    "SLF001",   # private-member-access
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # assert
    "PLR2004",  # magic value used in comparison (expected values in tests)
]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ["templates/.*\\.py"]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

# [tool.uv.sources]
# tiqi-zedboard = { path = "../tiqi-zedboard", editable = true }
# pydase = { path = "../pydase/", editable = true }
